2006-09-10	Benedikt Meurer <benny@xfce.org>

	* exo-open/main.c: Use GOption to parse the command line parameters
	  and add a --working-directory parameter, which is used when launching
	  applications via --launch.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2006-09-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.1.10rc1 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_drag_begin): Fix build with
	  compilers other than gcc. Bug #2252.
	* po/cs.po: Updated czech translations by Michal Várady 
	  <miko.vaji@gmail.com>.

2006-08-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-chooser-model.h: Need to include <exo/exo-config.h> to
	  make sure G_GNUC_WARN_UNUSED_RESULT is defined. Thanks to Enrico
	  Troeger <enrico.troeger@uvena.de> for the hint.

2006-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-chooser-dialog.c(CONTEXT_TITLES): Apply patch from
	  Matt McClinch <mattmcclinch@gmail.com> to fix a warning with older
	  compilers. Bug #2223.

2006-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Finally fix the layout problem where the
	  appearance of a scrollbar causes the icons to be laid out again and
	  again. Thanks to Matt McClinch <mattmcclinch@gmail.com> for the
	  patch. Bug #2219.
	* exo/exo-icon-view.c: Several small cleanups.

2006-08-26	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Fix typo, where -NDEBUG was used instead of
	  -DNDEBUG as preprocessor flag. Bug #2221.

2006-08-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-config.h.in: Verify that G_GNUC_NULL_TERMINATED is defined.
	* exo/exo-private.{c,h}: Add _exo_g_type_add_interface_simple() to