@@ -1,5 +1,10 @@
 2006-09-10	Benedikt Meurer <benny@xfce.org>
 
+	* docs/reference/exo-open.xml: Add the --working-directory parameter
+	  to the exo-open manpage.
+
+2006-09-10	Benedikt Meurer <benny@xfce.org>
+
 	* exo-open/main.c: Use GOption to parse the command line parameters
 	  and add a --working-directory parameter, which is used when launching
 	  applications via --launch.
